# hot_reloading_with_cmake

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: main.yml
game/: CMakeLists.txt  game.cpp
launcher/: CMakeLists.txt  launcher.cpp
platform/: CMakeLists.txt  application.h  platform.h  platform_linux.cpp  platform_win32.cpp
